--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -126,21 +126,29 @@
     <%# <% if UserCalendar.exists?(user_id: @current_user.id, calendar_id: @calendar.id) %> 
     <% if Calendar.find_by(id: @calendar.id).user_id == Current.user.id %>
       <h3>
-        <%= link_to "Edit this Calendar", edit_calendar_path(@calendar), class:"btn btn-sl btn-primary"%> |
-        <%= link_to "Back to Calendar List", calendars_path, class:"btn btn-sl btn-primary"%> | 
-        <div class="btn btn-sl btn-primary">
-            <a href="#" id="new-event" class="dropdown-toggle">
-                Add New Event <b class="caret"></b>
-            </a>
+      <div class="dropdown">
+        <div class="dropdown-inner">
+          <%= link_to "Edit this Calendar", edit_calendar_path(@calendar), class:"btn btn-sl btn-primary"%> |
+          <%= link_to "Back to Calendar List", calendars_path, class:"btn btn-sl btn-primary"%> | 
+          <div class="btn btn-sl btn-primary">
+              <a href="#" id="new-event" class="dropdown-toggle">
+                  Add New Event <b class="caret"></b>
+              </a>
+          </div>
+          <div>
+            <ul id="new-event-menu" class="dropdown-menu">
+              <li>
+              <%= link_to "New course", new_course_path %>
+              <%= link_to "New assignment", new_assignment_path %>
+              <%= link_to "New holiday", new_holiday_path %>
+              <%= link_to "New other event", new_other_event_path %>
+              </li>
+            </ul>
+          </div>
         </div>
-        <ul id="new-event-menu" class="dropdown-menu">
-            <li>
-            <%= link_to "New course", new_course_path %>
-            <%= link_to "New assignment", new_assignment_path %>
-            <%= link_to "New holiday", new_holiday_path %>
-            <%= link_to "New other event", new_other_event_path %>
-            </li>
-        </ul>
+      </div>
+        
+
       </h3>
       <hr class="rounded">
       <div <%= @calendar.id %> aria-labelledby="heading<%= @calendar.id %>">
@@ -153,7 +161,7 @@
       </div>
       <hr class="rounded">
       <div class = "container" style = "width:70%" >
-      <h3> Import Courses To This Calendar</h3>
+      <h3> Import Courses to this Calendar</h3>
         <%= form_tag import_from_excel_courses_url, multipart: true do %>
           <%= file_field_tag :file%>
           <%= hidden_field_tag :calendar_id , @calendar.id %>
