--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -12,7 +12,7 @@
 
 <div>
   <strong>Due Date</strong>
-  <p><%= @assignment.due_date %></p>
+  <p><%= @assignment.due_date%>  <%= @assignment.due_time.strftime("%I:%M%p").to_s%></p>
 </div>
 
 <div>
