--- a/app/views/home/calendar.html.erb
+++ b/app/views/home/calendar.html.erb
@@ -48,6 +48,7 @@
                 <br>
                 <input class="btn btn-sm btn-primary" id="datepicker-submit" value="Find" type="submit"/>      
             </form>
+            <p><%= @day.currentDate %></p>
         </div>
     </div>
 
